tratamento do click, objeto celula

--- a/puzzle.html
+++ b/puzzle.html
@@ -31,16 +31,19 @@
 			</div>
 		</div>
 
-		<div class="span6">
-			<h2>8 Puzzle</h2>
-			
-			<canvas id="canv_main" class="canvas" width="425" height="300">
-				Instale um browser de verdade!
-			</canvas>
+		<div class="row">
+			<div class="span6">
+				<h2>8 Puzzle</h2>
+				
+				<canvas id="canv_main" class="canvas" width="425" height="300">
+					Instale um browser de verdade!
+				</canvas>
+			</div>
 		</div>
 	</div>
 	
 	<script src="bootstrap/js/bootstrap.js"></script>
+	<script src="js/Celula.js"></script>
 	<script src="js/Matriz.js"></script>
 	<script src="js/main.js"></script>
 </body>
