tentativa de aplicar o algoritmo

--- a/puzzle.html
+++ b/puzzle.html
@@ -39,12 +39,21 @@
 					Instale um browser de verdade!
 				</canvas>
 			</div>
+			
+			<div class="span6 pull-right">
+				<button class="btn" onclick="executar()">Executar</button>
+				
+				<canvas id="canv_exec" class="canvas" width="425" height="300">
+					mimimi
+				</canvas>
+			</div>
 		</div>
 	</div>
 	
 	<script src="bootstrap/js/bootstrap.js"></script>
 	<script src="js/Celula.js"></script>
 	<script src="js/Matriz.js"></script>
+	<script src="js/Possibilidade.js"></script>
 	<script src="js/main.js"></script>
 </body>
 
