mostrando possibildiades, F, direcao tomada

--- a/puzzle.html
+++ b/puzzle.html
@@ -6,7 +6,7 @@
 	
 	<style>
 		.canvas {
-			border: 1px solid grey;
+			border: 0px;
 		}
 	</style>
 	
@@ -43,7 +43,7 @@
 			<div class="span6 pull-right">
 				<button class="btn" onclick="executar()">Executar</button>
 				
-				<canvas id="canv_exec" class="canvas" width="425" height="300">
+				<canvas id="canv_exec" class="canvas" width="425" height="330">
 					mimimi
 				</canvas>
 			</div>
